--- a/package.json
+++ b/package.json
@@ -37,13 +37,19 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@tiptap/extension-color": "2.10.2",
+    "@tiptap/extension-font-family": "2.10.2",
+    "@tiptap/extension-highlight": "2.10.2",
     "@tiptap/extension-image": "2.10.2",
+    "@tiptap/extension-link": "2.10.2",
     "@tiptap/extension-table": "2.10.2",
     "@tiptap/extension-table-cell": "2.10.2",
     "@tiptap/extension-table-header": "2.10.2",
     "@tiptap/extension-table-row": "2.10.2",
     "@tiptap/extension-task-item": "2.10.2",
     "@tiptap/extension-task-list": "2.10.2",
+    "@tiptap/extension-text-align": "2.10.2",
+    "@tiptap/extension-text-style": "2.10.2",
     "@tiptap/extension-underline": "2.10.2",
     "@tiptap/pm": "2.10.2",
     "@tiptap/react": "2.10.2",
@@ -58,6 +64,7 @@
     "next": "15.0.3",
     "next-themes": "^0.4.4",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-color": "2.19.3",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.54.2",
@@ -72,13 +79,14 @@
     "zustand": "5.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
   }
 }
